--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.468.0",
