--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.468.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.0.2"
